# JIPP2

./: CMakeLists.txt
allocation_basics/: CMakeLists.txt  main.cpp
lab_03/: CMakeLists.txt
lab_03/firstLib/: CMakeLists.txt
lab_03/zad_1/: CMakeLists.txt  main.cpp
project_1/: CMakeLists.txt
project_1/matrixApp/: CMakeLists.txt  main.cpp
project_1/matrixLib/: CMakeLists.txt  matrixLib.cpp  matrixLib.h  matrixMethods.cpp  matrixMethods.h
project_2/: CMakeLists.txt
project_2/include/: Calendar.h  Date.h  Day.h  ListNote.h  Note.h  TextNote.h
project_2/src/: Calendar.cpp  Date.cpp  Day.cpp  ListNote.cpp  Note.cpp  TextNote.cpp  main.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp  main.cpp
zad_1/: CMakeLists.txt  main.cpp
zadania_lab03/: CMakeLists.txt
zadania_lab03/include/: zadania.h  zadanie_1.h  zadanie_2.h  zadanie_3.h
zadania_lab03/src/: main.cpp  zadanie_1.cpp  zadanie_2.cpp  zadanie_3.cpp
zadania_lab04/: CMakeLists.txt
zadania_lab04/include/: Ball.h  Cuboid.h  Point.h  QuadraticFunction.h  Student.h  main.h
zadania_lab04/lib/: CMakeLists.txt
zadania_lab04/src/: Ball.cpp  CMakeLists.txt  Cuboid.cpp  Figure.cpp  Figure.h  Point.cpp  QuadraticFunction.cpp  Student.cpp  TestMemory.cpp  TestMemory.h  main.cpp
zadania_lab05/: CMakeLists.txt
zadania_lab05/include/: Point.h  Vehicle.h
zadania_lab05/src/: Point.cpp  Vehicle.cpp  (+1 more)
zadania_lab06/: CMakeLists.txt
zadania_lab07/: CMakeLists.txt
zadania_lab08/: CMakeLists.txt
zadania_lab09/: CMakeLists.txt
zadania_lab10/: CMakeLists.txt
(+33 files in other folders)
