cmake_minimum_required(VERSION 3.16)
add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(zadania_lab03)
add_subdirectory(zadania_lab04)
add_subdirectory(zadania_lab05)
add_subdirectory(zadania_lab06)
add_subdirectory(zadania_lab07)
add_subdirectory(zadania_lab08)
add_subdirectory(zadania_lab09)
add_subdirectory(zadania_lab10)
add_subdirectory(project_1)